<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="ویرایش اطلاعات فردی"
            android:id="@+id/txtEditPersonalInfo"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="آدرس ایمیل"
            android:id="@+id/txtEmailAddress"
            android:layout_margin="10dp"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtEditEmailAddress"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="شماره موبایل"
            android:layout_margin="10dp"
            android:id="@+id/txtMobile"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtEditMobile"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="سال تولد"
            android:id="@+id/txtBirthYear"
            android:layout_margin="10dp"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtEditBirthYear"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="آدرس"
            android:layout_margin="10dp"
            android:id="@+id/txtAddress"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtEditAddress"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/textColorBlack" />

        <TextView
            android:text="استان محل سکونت"
            android:id="@+id/txtProvince"
            android:layout_margin="10dp"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:padding="10dp"
            android:id="@+id/spinnerPIProvince"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:entries="@array/Province"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/textColorGrey" />

        <TextView
            android:text="وضعیت تأهل"
            android:layout_margin="10dp"
            android:id="@+id/txtMarital"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinnerMarital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Marital_arrays"
            android:prompt="@string/Marital"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/textColorGrey" />

        <TextView
            android:text="جنسیت"
            android:layout_margin="10dp"
            android:id="@+id/txtGender"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Gender_arrays"
            android:prompt="@string/Gender"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/textColorGrey" />

        <TextView
            android:text="وضعیت خدمت سربازی"
            android:layout_margin="10dp"
            android:id="@+id/txtMilitaryservice"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/textSize1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinnerMilitaryservice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Militaryservice_arrays"
            android:prompt="@string/Militaryservice"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"
            />


        <Button
            android:id="@+id/btn_save_editpersoalinfo"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/flatButton"
            android:textColor="@color/textColorWhite"
            android:textSize="20dp"
            android:text="اعمال"/>

    </LinearLayout>
</ScrollView>